# rust-recipe-gallery

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: Cargo.toml
backend/migrations/2023-06-18-155023_comments/: up.sql
backend/src/: main.rs  models.rs
backend/src/database/: controller.rs
backend/src/middleware/: custom_json_extractor.rs  mod.rs  print_body_middleware.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/end2end/: package-lock.json  package.json  tsconfig.json
frontend/end2end/tests/: example.spec.ts  rust-recipe-gallery.spec.ts
frontend/src/: api.rs  app.rs  fileserv.rs  lib.rs  main.rs  models.rs
frontend/src/components/: add_post_form.rs  footer.rs  mod.rs  top_nav_bar.rs
frontend/style/: tailwind.css
go-backend/: .dockerignore  Caddyfile  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  nginx.conf
go-backend/src/: crud.go  db.go  main.go
rust-recipe-gallery-backend/: Cargo.toml
rust-recipe-gallery-backend/migrations/2023-06-15-020841_recipe-gallery/: up.sql
rust-recipe-gallery-backend/migrations/2023-06-15-020841_recipes/: up.sql
rust-recipe-gallery-backend/src/: custom_json_extractor.rs  custom_path_extractor.rs  errors.rs  main.rs  models.rs  print_body_middleware.rs  print_request_body_middleware.rs
rust-recipe-gallery-backend/src/database/: controller.rs  mod.rs  schema.rs
rust-recipe-gallery-backend/src/middleware/: print_body_middleware.rs
rust-recipe-gallery-frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json
rust-recipe-gallery-frontend/end2end/tests/: example.spec.ts
rust-recipe-gallery-frontend/src/: app.rs  lib.rs  main.rs
