[package]
name = "rust-recipe-gallery-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
validator = { version = "0.16.1", features = ["derive"] }
hyper = { version = "0.14.26" }                                          # docs said to use "full", but i'm done so I go back!
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] } # same
# tower = "0.4.13" # good for testing, but nahhhhhhhhhhhhh
uuid = { version = "1.4.1", features = ["serde", "v4"] }
diesel-async = { version = "0.3.2", features = ["postgres", "bb8"] }
bb8 = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.3", features = [
    "trace",
    "cors",
] } # cors for local dev
