[package]
name = "rust-recipe-gallery-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.1"
anyhow = "1.0.83"
axum = "0.7.5"
diesel = { version = "2.1.6", features = ["postgres", "uuid"] }
validator = { version = "0.16.1", features = ["derive"] }
hyper = { version = "1.3.1" }                                            # docs said to use "full", but i'm done so I go back!
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] } # same
# tower = "0.4.13" # good for testing, but nahhhhhhhhhhhhh
uuid = { version = "1.8.0", features = ["serde", "v4"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
bb8 = "0.8.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = [
    "trace",
    "cors",
] } # cors for local dev
