[package]
name = "rust-recipe-gallery-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
validator = { version = "0.16.0", features = ["derive"] }
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
bb8 = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = [
    "trace",
    "map-request-body",
    "util",
] }
