[package]
name = "rust-recipe-gallery-frontend"
version = "0.1.0"
edition = "2021"
publish = false

# for leptos?
[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", optional = true }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.3.1", default-features = false, features = [] }
leptos_axum = { version = "0.3.1", optional = true }
leptos_meta = { version = "0.3.1", default-features = false, optional = true }
leptos_router = { version = "0.3.1", default-features = false, optional = true }
log = "0.4.19"
simple_logger = "4.2.0"
wasm-bindgen = "0.2.87"
tokio = { version = "1.28.2", features = [] }
cfg-if = "1.0.0"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    # "dep:tokio",
    # "dep:tower",
    # "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    # "dep:tracing",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]


[package.metadata.leptos]
style-file = "style/tailwind.css"
tailwind-input-file = "style/tailwind.css"
bin-features = ["ssr"]
lib-features = ["hydrate"]
